--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +11,9 @@
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
   <script src="node_modules/lodash/lodash.js"></script>
+  <script src="src/data/exampleVideoData.js"></script>
 </head>
+
 <body>
   <div id="app"></div>
   <script src="compiled/src/components/VideoListEntry.js"></script>
@@ -21,4 +24,5 @@
   <script src="compiled/src/components/App.js"></script>
   <script src="compiled/src/index.js"></script>
 </body>
+
 </html>
